--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ set(SOURCE_FILES
         src/dsp/DSPSystem.hpp
         src/dsp/LadderFilter.hpp
         src/dsp/LadderFilter.cpp
-        src/dsp/MS20zdf.hpp src/dsp/MS20zdf.cpp src/MS20Filter.cpp)
+        src/dsp/MS20zdf.hpp src/dsp/MS20zdf.cpp src/MS20Filter.cpp src/LRComponents.cpp src/LRComponents.hpp)
 
 include_directories(.)
 include_directories(src)
