fix cmake build file for clion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,8 @@ include_directories(.)
 include_directories(src)
 include_directories(src/dsp)
 include_directories(../../include)
-include_directories(~/Development/Rack/include)
-include_directories(~/Development/Rack/include/dsp)
-include_directories(~/Development/Rack/dep/include)
+include_directories(../../include)
+include_directories(../../include/dsp)
+include_directories(../../dep/include)
 
 add_executable(LRT ${SOURCE_FILES} src/dsp/DSPMath.cpp src/dsp/DSPMath.hpp src/Release.h)
