--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,12 +37,10 @@ set(SOURCE_FILES
         src/widgets/LRKnob.cpp
         src/widgets/LRShadow.cpp
         src/widgets/LRCVIndicator.cpp
-        src/widgets/LRCVIndicator.cpp
         src/widgets/LRLCDWidget.cpp
         src/widgets/LRLight.cpp
         src/widgets/LRPanel.cpp
         src/widgets/LRSVGRotator.cpp
-        src/dsp/Saturator.cpp
         src/dsp/Saturator.cpp
         src/dsp/DelayLine.hpp
         src/dsp/DelayLine.cpp
@@ -63,7 +61,23 @@ set(SOURCE_FILES
         src/widgets/FontIconWidget.cpp
         src/modules/BlankPanelSmall.cpp
         src/modules/Speck.cpp
-        src/widgets/LRGradientWidget.cpp src/LRModule.cpp src/LRModuleWidget.cpp src/LRModel.hpp src/widgets/LRPatinaWidget.cpp src/LRGestalt.hpp src/modules/Type35.cpp src/dsp/Type35Filter.cpp src/dsp/Type35Filter.hpp src/dsp/RateConverter.cpp src/dsp/RateConverter.hpp src/dsp/BiquadFilter.cpp src/dsp/BiquadFilter.hpp src/dsp/IIRFilter.hpp src/dsp/BBDCore.hpp src/modules/EchoBox.cpp)
+        src/widgets/LRGradientWidget.cpp
+        src/LRModule.cpp
+        src/LRModuleWidget.cpp
+        src/LRModel.hpp
+        src/widgets/LRPatinaWidget.cpp
+        src/LRGestalt.hpp
+        src/modules/Type35.cpp
+        src/dsp/Type35Filter.cpp
+        src/dsp/Type35Filter.hpp
+        src/dsp/RateConverter.cpp
+        src/dsp/RateConverter.hpp
+        src/dsp/BiquadFilter.cpp
+        src/dsp/BiquadFilter.hpp
+        src/dsp/IIRFilter.hpp
+        src/dsp/BBDCore.hpp
+        src/modules/EchoBox.cpp
+        src/String.hpp)
 
 include_directories(.)
 include_directories(src)
